add Makefile for compilation issues